--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "mocha": "^10.7.3",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "lint": "^0.8.19"
   }
 }
