--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "mocha",
-    "lint": "eslint.js"
+    "lint": "eslint"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
